<resources>
    <string name="app_name">News App</string>
    <string name="no_network">No network connection</string>
    <string name="default_author">Author: The Guardian</string>
    <string name="author">Author:</string>
    <string name="technology">#Technology</string>
    <string name="demo_news_text">Breathtaking video captures meteor exploding in night sky</string>
    <string name="demo_author">Author: Mary Black</string>
    <string name="demo_date">12, Oct 2018</string>
    <string name="demo_pretty_date">9 hours ago</string>
</resources>
